Fix for alignment issue on homepage

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -7,7 +7,7 @@
         background: #1d1d1d;
 
         .intro-text {
-            max-width: 54em;
+            max-width: 56em;
             margin: 0 auto;
             padding: 2em 0 2.5em;
             width: 90%;
